# flaxseed_c_plus2

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
build_debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_debug/src/: Makefile  example
src/: CMakeLists.txt  Makefile  color_code.h  constants.h  example  example_window.cc  example_window.h  main.cc
